--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -3,7 +3,7 @@
 
 <head>
 
-    {{!-- {{> base/meta}} --}}
+    {{> base/meta}}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css">
     <link inline rel='stylesheet' href='bundle.css' />
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
