--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -52,7 +52,7 @@
                     <select class='search-verb__input' id='search-verb__input'></select>
                 </div>
                 <form class='search-noun'>
-                    <input class='search-noun__input' type="text" name="search" placeholder="search by noun">
+                    <input class='search-noun__input' type="text" name="search" placeholder="noun">
                 </form>
             </nav>
         </div>
