--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -353,6 +353,12 @@
         font-family: 'Share Tech Mono', monospace;
         color: #000
         max-width: 20rem
+        text-align: left;
+        padding-right: 3rem;
+
+.shepherd-content
+    .shepherd-header
+        background-color: transparent
 
 .invisible
     visibility: hidden
