--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -34,7 +34,8 @@
 
     <script src='{{basepath}}assets/scripts/d3.v5.10.0.min.js'></script>
     <script src='main.js?version={{timestamp}}' async></script>
-    <script src="{{basepath}}assets/scripts/choices.min.js"></script>
+    {{!-- <script src="{{basepath}}assets/scripts/choices.min.js"></script> --}}
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 </body>
 
 </html>
