update dev version

--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class='main-page__sidebar hidden'>
-        <div class='mark'><a href='https://www.pudding.cool'><img src='./assets/images/P_logo.svg'></a></div>
+        <div class='mark'><a href='https://www.pudding.cool'><img src='{{basepath}}assets/images/P_logo.svg'></a></div>
         <div class='button-container'>
             <div class='button button-positive-high'>😁</div>
             <div class='button button-positive-low'>🙂</div>
@@ -66,7 +66,7 @@
             <div class='button button-negative-low'>🙁</div>
             <div class='button button-negative-high'>😱</div>
         </div>
-        <div class='info'><img src='./assets/images/info.svg'></div>
+        <div class='info'><img src='{{basepath}}assets/images/info.svg'></div>
     </div>
 
     <div class='main-page__content mono'>
