--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -1,6 +1,7 @@
 <section class='intro'>
 
     <div class='intro-text'>
+        <div class='masthead'><img inline src='pudding/wordmark.svg'></div>
         <p class='intro-hed'>Millennials kill everything</p>
         <p class='intro-body'>Ok, not really... but as millennials, we’ve seen countless headlines about what we’ve
             supposedly offed.
