update dev version

--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -36,8 +36,10 @@
     </div>
 
     <div class='byline-container'>
-        <p class='byline'>DATA AND STORY BY ALLIE SAIZAN</p>
-        <p class='byline'> DESIGN + DEVELOPMENT ILIA BLINDERMAN AND JAN DIEHM</p>
+        <p class='byline'>DATA AND STORY BY <a target="_blank" href="https://github.com/alliesaizan">ALEXANDRA
+                SAIZAN</a></p>
+        <p class='byline'> DESIGN + DEVELOPMENT <a href="https://pudding.cool/author/ilia-blinderman/">ILIA
+                BLINDERMAN</a> AND <a href="https://pudding.cool/author/jan-diehm/">JAN DIEHM</a></p>
     </div>
 </section>
 
