--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -70,6 +70,9 @@
     color white
     @media (max-width: 1100px)
         font-size 16px
+    a
+        color white
+        border-bottom: 1px solid #fff
 
 .intro-text 
     margin-left: 3rem        
