--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -8,7 +8,7 @@
     <link inline rel='stylesheet' href='bundle.css' />
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 
-    {{> base/font}}
+    {{!-- {{> base/font}} --}}
 
 
     <script inline src='head.js'></script>
