--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -1,7 +1,7 @@
 <section class='intro'>
 
     <div class='intro-text'>
-        <div class='masthead'><img inline src='pudding/wordmark.svg'></div>
+        <div class='masthead'><a href='https://www.pudding.cool'><img inline src='pudding/wordmark.svg'></a></div>
         <p class='intro-hed'>Millennials kill everything</p>
         <p class='intro-body'>Ok, not really... but as millennials, we’ve seen countless headlines about what we’ve
             supposedly offed.
@@ -36,7 +36,8 @@
     </div>
 
     <div class='byline-container'>
-        <p class='byline'>DATA AND STORY BY <a target="_blank" href="https://github.com/alliesaizan">ALEXANDRA
+        <p class='byline'>DATA AND STORY BY <a target="_blank"
+                href="https://pudding.cool/author/alexandra-saizan">ALEXANDRA
                 SAIZAN</a></p>
         <p class='byline'> DESIGN + DEVELOPMENT <a href="https://pudding.cool/author/ilia-blinderman/">ILIA
                 BLINDERMAN</a> AND <a href="https://pudding.cool/author/jan-diehm/">JAN DIEHM</a></p>
