--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -29,7 +29,7 @@
 
     </main>
 
-    {{!-- {{> base/footer }} --}}
+    {{> base/footer }}
 
 
     <script src='{{basepath}}assets/scripts/d3.v5.10.0.min.js'></script>
