--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -3,15 +3,16 @@
 .intro
     background: linear-gradient(180deg, rgba(255, 90, 129, 0.98) 0%,rgba(175, 40, 150, 0.98) 100%)    
     display: flex;
-    padding-top 1rem
-    flex-direction: row;
+    padding-top 3rem
+    padding-right 3rem
+    padding-left 3rem
+    flex-direction: row;    
     height 100%
     @media (max-width: 550px)
         margin 0rem 0rem 0rem 0rem
-        padding 1rem 1rem 3rem 0rem
+        padding 1rem 3rem 3rem 3rem
         display: block;
         
-
     &__sidebar        
         height 100%
         width  3rem
@@ -33,8 +34,6 @@
     transform: rotate(90deg)
 
     &__container
-        position: absolute;
-        left 50%
         width: 4rem;
         height: 4rem;
         background-color: #000
@@ -49,40 +48,46 @@
         -ms-flex-align: center;
         align-items: center;
         cursor pointer
-        transform: translate(-50%, 0);
+        margin 0 auto
         @media (max-width: 550px)
-            display none 
+            // display none 
 
 .byline-container
-    position absolute
+    // position absolute
     bottom 1rem
     left 4rem
     @media (max-width: 550px)
         position relative
         margin-top 5rem
         left 0
-        padding-left 3rem
+        // padding-left 3rem
 
 
 .byline    
     margin 0
     font-family: 'Share Tech Mono', monospace;
     color white
+    @media (max-width: 550px)
+        font-size 14px    
     @media (max-width: 1100px)
-        font-size 16px
+        font-size 12px
     a
         color white
         border-bottom: 1px solid #fff
 
+
 .intro-text 
-    margin-left: 3rem        
+    // margin-left: 3rem        
     .intro-hed
+        text-align: center
         font-size 72px
         color white
         font-family 'Share Tech Mono', monospace;
         padding-left 0
         @media (max-width: 1100px)
             font-size 64px
+        @media (max-width: 650px)
+            font-size 48px    
         @media (max-width: 550px)
             color white
             font-size 42px
@@ -104,18 +109,24 @@
     cursor pointer
 
 .method 
-    margin-left: 4rem   
+    margin-right: 3rem      
+    margin-top 2rem 
+    margin-bottom 2rem
     font-family: 'Share Tech Mono', monospace;
+    border: 1px solid white
+    padding 1rem 1rem 0 1rem
     
 
 .method
     &__hed
         color: #fff;
+        text-align center
 
     &__body   
         color: #fff; 
-        padding-bottom 2rem
-        border-bottom: 1px white solid
+        padding-bottom 1rem
+        font-size 16px
+        
     
     &__close
         background-color: black
@@ -210,10 +221,8 @@
     &__content
         margin-left: 3rem
 
-.content
-    margin-left 1rem
-    padding-left: 3rem;
-    padding-right: 5rem;
+.content        
+    padding-right: 3rem;    
     @media (max-width: 550px)
         padding-left 0
         padding-right 1rem
@@ -239,6 +248,7 @@
 .verb-name
     color #FF5A81
     text-transform: uppercase
+    padding-top 1rem
 
 .verb-selected
     border-bottom: 1px white solid;
@@ -389,6 +399,7 @@
     fill white    
 
 .info
+    display: none
     svg 
         fill white
 
@@ -398,14 +409,57 @@
 .choices__list--dropdown .choices__item
     font-family: 'Share Tech Mono', monospace;
 
+
 .masthead
-    position: relative 
-    height 2rem
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+    display: block;
+    max-width: 10%;
+    transform: translate(-50%,0);
+    @media(max-width 550px)
+        position: relative 
+        height 2rem
+
     #wordmark
-        top 1rem
-        left 3rem
-        width 100%
-        height 100%
-        margin 0 auto
-        fill #fff
+        display: block;
+        fill: white;
+        height 2rem
+        @media(max-width 550px)
+            width 100%
+            height 100%
+            margin 0 auto
+            fill #fff
+            display: block
+
+.tour-label
+    font-family: 'Share Tech Mono', monospace;
+    color white
+    text-align center
+
+// .masthead
+//     position absolute 
+//     height 2rem    
+//     top 5%
+//     left 50%
+//     transform: translate(-50%,0)
+//     @media(max-width 550px)
+//             position: relative 
+//             height 2rem    
+//     a
+//         border-bottom none;
+//     #wordmark
+//         height 3rem
+//         width 10rem
+//         position: absolute
+ 
+//         // transform: translate(-50%,0)
+
+//         @media(max-width 550px)
+//             width 100%
+//             height 100%
+//             margin 0 auto
+//             fill #fff
+//             display: block
+        
         
