--- a/src/html/partials/story/main.hbs
+++ b/src/html/partials/story/main.hbs
@@ -2,11 +2,19 @@
     <div class='masthead'><a href='https://www.pudding.cool'><img inline src='pudding/wordmark.svg'></a></div>
     <div class='intro-text'>
 
-        <p class='intro-hed'>Millennials kill everything</p>
+        <p class='intro-hed'>Millennials Kill Everything</p>
+        <div class='byline-container'>
+            <p class='byline'>DATA AND STORY BY <a target="_blank"
+                    href="https://pudding.cool/author/alexandra-saizan">ALEXANDRA
+                    SAIZAN</a></p>
+            <p class='byline'> DESIGN + DEVELOPMENT <a href="https://pudding.cool/author/ilia-blinderman/">ILIA
+                    BLINDERMAN</a> AND <a href="https://pudding.cool/author/jan-diehm/">JAN DIEHM</a></p>
+        </div>
         <p class='intro-body'>...OK, not really. But we’ve seen countless stories about what millennials have killed.
             From napkins to marriage to Applebees, just looking at headlines you’d
             guess that for the past decade the millennial generation's been on a rampage. But we wanted to dig deeper:
-            how does popular media report on millennials, more broadly? </p>
+            how does popular media report on millennials more broadly?
+        </p>
         <div class='tour-container'>
             <div class='enter-arrow__container'>
                 <svg class='enter-arrow' width="24" height="24" fill="none" stroke-width="2" stroke-linecap="round"
@@ -18,13 +26,7 @@
             </div>
             <p class='tour-label'>Tap to take the tour!</p>
         </div>
-        <div class='byline-container'>
-            <p class='byline'>DATA AND STORY BY <a target="_blank"
-                    href="https://pudding.cool/author/alexandra-saizan">ALEXANDRA
-                    SAIZAN</a></p>
-            <p class='byline'> DESIGN + DEVELOPMENT <a href="https://pudding.cool/author/ilia-blinderman/">ILIA
-                    BLINDERMAN</a> AND <a href="https://pudding.cool/author/jan-diehm/">JAN DIEHM</a></p>
-        </div>
+
     </div>
 
 
@@ -87,15 +89,6 @@
                 interacting with. Noun chunks include adjectives plus nouns, such as “second home” instead of “home”.
                 This
                 method left us with about 4,000 unique nouns and 2,000 unique verbs.
-            </p>
-            <p class='method__body'>
-                We also computed the average polarity (also called sentiment or valence) among nouns and headlines. We
-                used
-                the Natural Language Toolkit (NLTK) Sentiment Intensity Analyzer to calculate headline polarity. A
-                polarity
-                is a numeric score ranging from -1 to 1 that indicates sentiment. Polarities above zero indicate
-                positive
-                sentiment, below zero indicate negative sentiment, and equaling zero indicate neutral sentiment.
             </p>
         </div>
     </div>
