--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -6,6 +6,7 @@ header
 	width 100%
 	background-color $white
 	font-family $sans
+    
 
 	a.logo
 		display block
@@ -14,15 +15,14 @@ header
 		margin 1rem auto
 
 		svg
-			fill $off-black
+			fill $off-white
 			display block
 			width 100%
 	
 header.is-sticky
-	position fixed
-	transform translate3d(0,0,0)
-	background-color $white
-	box-shadow 0 0 7px 1px $gray-light
+	position absolute
+	transform translate3d(0,0,0)	
+	background-color rgba(255,90,129,0.98)
 	height 3rem
 	display flex
 	align-items center
@@ -31,7 +31,7 @@ header.is-sticky
 		margin 0 auto
 	
 	.header__toggle
-		position fixed
+		position absolute
 		transform translate3d(0,0,0)
 		top 0
 		right 0
@@ -42,7 +42,7 @@ header.is-sticky
 		border none 
 		background-color transparent
 		svg
-			stroke $off-black
+			stroke $off-white
 		
 		span
 			&:first-of-type
@@ -60,7 +60,7 @@ header.is-sticky
 				stroke $off-white
 
 	.header__menu
-		position fixed
+		position absolute
 		top 0
 		right 0
 		transform translateX(100%)
