--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -493,6 +493,8 @@
     background-color: rgba(175, 40, 150, 0.97)     
     color: white;
 
+select.search-verb__input
+    display: none
 
 
 // footer.pudding-footer .footer-recirc .article__headline
